Fixing export excel